[gd_scene load_steps=9 format=3 uid="uid://djn7y7jynw3wd"]

[ext_resource type="Script" path="res://scences/Levels/level_assests_test.gd" id="1_x5grk"]
[ext_resource type="AudioStream" uid="uid://c7oqhv2l0aosh" path="res://Audio/solid_impact.ogg" id="2_yjr7o"]
[ext_resource type="AudioStream" uid="uid://ctbevby32mmuc" path="res://Audio/doorhit-98828.mp3" id="3_yrgd2"]
[ext_resource type="AudioStream" uid="uid://dtu6ash3d4jpc" path="res://Audio/rock-destroy-6409.mp3" id="4_2dlik"]
[ext_resource type="PackedScene" uid="uid://bh3v0q07ukyu4" path="res://ui.tscn" id="5_kaxbb"]
[ext_resource type="PackedScene" uid="uid://bao061uq5658n" path="res://scences/controlled_char.tscn" id="6_dres2"]
[ext_resource type="PackedScene" uid="uid://dek0upkbx1eab" path="res://scences/UI/shakeable_camera.tscn" id="7_xlqp2"]
[ext_resource type="PackedScene" uid="uid://bqdu25p4rpqrg" path="res://scences/room_templates/room_generator_scene.tscn" id="8_l8n5l"]

[node name="generator_test" type="Node2D"]
script = ExtResource("1_x5grk")

[node name="RoomGenerator" parent="." instance=ExtResource("8_l8n5l")]

[node name="Sound" type="Node" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="Sound"]
top_level = true
stream = ExtResource("2_yjr7o")
pitch_scale = 0.58

[node name="ThrowCollideSound" type="AudioStreamPlayer2D" parent="Sound"]
top_level = true
stream = ExtResource("3_yrgd2")
volume_db = -4.55

[node name="ThrowBreakSound" type="AudioStreamPlayer2D" parent="Sound"]
top_level = true
stream = ExtResource("4_2dlik")

[node name="UI" parent="." node_paths=PackedStringArray("Player") instance=ExtResource("5_kaxbb")]
Player = NodePath("../ControlledChar")

[node name="ControlledChar" parent="." instance=ExtResource("6_dres2")]
position = Vector2(24, 88)

[node name="Shakeable_Camera" parent="ControlledChar" instance=ExtResource("7_xlqp2")]
zoom = 0.5
